# Dev-Notepad-For-Mac

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  dialogs.py  editor.py  main.py  main_window.py  models.py  settings.py  storage.py  syntax.py  text_utils.py
docs/: packaging.md
